--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "*.{js,jsx,ts,tsx,json,css,md}": "prettier --write"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.0.1",
     "@types/react-redux": "^7.1.33",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
